<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.android.airqualitypollen.presentation.details.DetailsAirQualityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:spinnerGoneIfNotNull="@{viewModel.currentAirQuality.lng}" />

        <TextView
            android:id="@+id/tv_locationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/air_quality_details_label_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:currentLocation="@{viewModel.currentAirQuality}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_descriptionLabel"
            app:layout_constraintTop_toTopOf="@+id/tv_locationLabel"
            tools:text="37.2593, -122.0302" />

        <TextView
            android:id="@+id/tv_descriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/air_quality_details_label_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_locationLabel" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:maxLines="2"
            app:currentDescription="@{viewModel.currentAirQuality}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_descriptionLabel"
            app:layout_constraintTop_toBottomOf="@+id/tv_locationLabel"
            tools:text="Saratoga, 95071 Santa Clara, California, US" />

        <TextView
            android:id="@+id/tv_no2Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/air_quality_details_label_no2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_descriptionLabel" />

        <TextView
            android:id="@+id/tv_no2"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:formatDecimal="@{viewModel.currentAirQuality.no2}"
            app:layout_constraintStart_toEndOf="@+id/tv_pm10Label"
            app:layout_constraintTop_toTopOf="@+id/tv_no2Label" />

        <TextView
            android:id="@+id/tv_coLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/air_quality_details_label_co"
            app:layout_constraintEnd_toStartOf="@+id/tv_co"
            app:layout_constraintTop_toTopOf="@+id/tv_no2" />

        <TextView
            android:id="@+id/tv_co"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:formatDecimal="@{viewModel.currentAirQuality.co}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_coLabel" />

        <TextView
            android:id="@+id/tv_pm10Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/air_quality_details_label_pm10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_no2Label" />

        <TextView
            android:id="@+id/tv_pm10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:formatDecimal="@{viewModel.currentAirQuality.pm10}"
            app:layout_constraintEnd_toEndOf="@+id/tv_no2"
            app:layout_constraintStart_toEndOf="@+id/tv_pm10Label"
            app:layout_constraintTop_toTopOf="@+id/tv_pm10Label" />

        <TextView
            android:id="@+id/tv_pm25Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/air_quality_details_label_pm25"
            app:layout_constraintEnd_toStartOf="@+id/tv_pm25"
            app:layout_constraintTop_toTopOf="@+id/tv_pm10" />

        <TextView
            android:id="@+id/tv_pm25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:formatDecimal="@{viewModel.currentAirQuality.pm25}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_co"
            app:layout_constraintTop_toTopOf="@+id/tv_pm25Label" />

        <TextView
            android:id="@+id/tv_so2Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/air_quality_details_label_so2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pm10Label" />

        <TextView
            android:id="@+id/tv_so2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:formatDecimal="@{viewModel.currentAirQuality.so2}"
            app:layout_constraintEnd_toEndOf="@+id/tv_pm10"
            app:layout_constraintStart_toEndOf="@+id/tv_pm10Label"
            app:layout_constraintTop_toTopOf="@+id/tv_so2Label" />

        <TextView
            android:id="@+id/tv_ozoneLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/air_quality_details_label_ozone"
            app:layout_constraintEnd_toStartOf="@+id/tv_ozone"
            app:layout_constraintTop_toTopOf="@+id/tv_so2" />

        <TextView
            android:id="@+id/tv_ozone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:formatDecimal="@{viewModel.currentAirQuality.ozone}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_pm25"
            app:layout_constraintTop_toTopOf="@+id/tv_ozoneLabel" />


        <TextView
            android:id="@+id/tv_aqiLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/air_quality_details_label_aqiLabel"
            app:layout_constraintStart_toStartOf="@+id/tv_so2Label"
            app:layout_constraintTop_toBottomOf="@+id/tv_so2Label" />

        <TextView
            android:id="@+id/tv_aqi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            app:formatDecimal="@{viewModel.currentAirQuality.aqi}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_concentrationLabel"
            app:layout_constraintTop_toTopOf="@+id/tv_aqiLabel" />

        <TextView
            android:id="@+id/tv_pollutantLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/air_quality_details_label_pollutant"
            app:layout_constraintStart_toStartOf="@+id/tv_aqiLabel"
            app:layout_constraintTop_toBottomOf="@+id/tv_aqiLabel" />

        <TextView
            android:id="@+id/tv_pollutant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@{viewModel.currentAirQuality.pollutant}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_concentrationLabel"
            app:layout_constraintTop_toTopOf="@+id/tv_pollutantLabel" />

        <TextView
            android:id="@+id/tv_concentrationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/air_quality_details_label_concentration"
            app:layout_constraintStart_toStartOf="@+id/tv_pollutantLabel"
            app:layout_constraintTop_toBottomOf="@+id/tv_pollutantLabel" />

        <TextView
            android:id="@+id/tv_concentration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            app:formatDecimal="@{viewModel.currentAirQuality.concentration}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_concentrationLabel"
            app:layout_constraintTop_toTopOf="@+id/tv_concentrationLabel" />

        <TextView
            android:id="@+id/tv_categoryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/air_quality_details_label_category"
            app:layout_constraintStart_toStartOf="@+id/tv_concentrationLabel"
            app:layout_constraintTop_toBottomOf="@+id/tv_concentrationLabel" />

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@{viewModel.currentAirQuality.category}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_concentrationLabel"
            app:layout_constraintTop_toTopOf="@+id/tv_categoryLabel" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>